better overflow + bug fix

--- a/src/components/ChatRoom/ChatRoom.module.css
+++ b/src/components/ChatRoom/ChatRoom.module.css
@@ -7,7 +7,8 @@
   border-bottom: solid 1px white;
   border-right: solid 1px white;
   background-color: #CED0CF;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden
 }
 
 .banner {
